# bindbc-sdl

./: meson.build  meson_options.txt
source/bindbc/sdl/: dynload.d
subprojects/: bindbc-loader.wrap
